# rumux

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-cli.yml  release-desktop.yml
app/: Cargo.toml
app/src/: app_state.rs  command_palette.rs  config.rs  custom_commands.rs  dropdown_menu.rs  find_bar.rs  instance.rs  main.rs  notification_panel.rs  notifications.rs  pane.rs  root_view.rs  session.rs  sidebar.rs  socket_server.rs  terminal_panel.rs  terminal_surface.rs  text_input.rs  theme.rs  workspace.rs
assets/linux/: io.github.lukasguptaleary.rumux.desktop  io.github.lukasguptaleary.rumux.metainfo.xml
crates/gpui-component/src/dock/: mod.rs  panel.rs  tab_panel.rs
crates/gpui-component/src/input/: state.rs
crates/gpui-terminal/: README.md
crates/gpui-terminal/src/: box_drawing.rs  input.rs  lib.rs  render.rs  view.rs
crates/rumux-cli/: Cargo.toml
crates/rumux-cli/src/: hook.rs  main.rs  shell.rs
crates/rumux-cli/src/commands/: cd.rs  completions.rs  init.rs  ls.rs  mcp.rs  merge.rs  mod.rs  new.rs  rm.rs  socket_client.rs  start.rs  update.rs  version.rs
crates/rumux-cli/tests/: integration.rs
crates/rumux-core/: Cargo.toml
crates/rumux-core/src/: config.rs  errors.rs  git_ops.rs  lib.rs  rpc.rs  runtime.rs
scripts/: package-desktop.sh
