[workspace]
members = [
    "crates/rumux-core",
    "crates/rumux-cli",
    "app",
]
default-members = [
    "crates/rumux-core",
    "crates/rumux-cli",
    "app",
]
exclude = [
    "crates/gpui-component",
    "crates/gpui-terminal",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/LukasGuptaLeary/rumux"
homepage = "https://github.com/LukasGuptaLeary/rumux"
