[package]
name = "rumux-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for rumux: git worktree lifecycle manager for parallel Claude Code sessions"
license = "MIT"

[[bin]]
name = "rumux"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
console = "0.15"
dialoguer = "0.11"
git2 = "0.20"
rumux-core = { path = "../rumux-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "rt"] }

[dev-dependencies]
tempfile = "3"
