[package]
name = "rumux-core"
version = "0.1.0"
edition = "2024"
description = "Shared library for rumux: git ops, config, types"
license = "MIT"

[dependencies]
anyhow = "1"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
