[package]
name = "rumux-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared library for rumux: git ops, config, types"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1"
dirs = "6"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
